@@ -78,20 +78,24 @@ def test_unicode_encoding():
         tw.line(msg)
         assert l[0].strip() == msg.encode(encoding)
 
-def test_unicode_on_file_with_no_encoding(tmpdir, monkeypatch):
+@pytest.mark.parametrize("encoding", [None, "ascii"])
+def test_unicode_on_file_with_no_encoding(tmpdir, monkeypatch, encoding):
     try:
         bytes
     except NameError:
         bytes = str
     msg = py.builtin._totext('öl', "utf8")
     #pytest.raises(UnicodeEncodeError, lambda: bytes(msg))
-    f = py.std.codecs.open(str(tmpdir.join("x")), "w", None)
+    f = py.std.codecs.open(str(tmpdir.join("x")), "w", encoding, errors="replace")
     tw = py.io.TerminalWriter(f, encoding=None)
     tw.encoding = None
     tw.line(msg)
     f.close()
     s = tmpdir.join("x").open("rb").read().strip()
-    assert s == msg.encode("utf8")
+    if encoding is None:
+        assert s == msg.encode(f.encoding or "utf-8")
+    else:
+        assert s.decode(encoding) == '?l'
 
 class TestTerminalWriter:
     def pytest_generate_tests(self, metafunc):
